stateDiagram-v2
  [*] --> IDLE
  CHECKING_CAMERAS --> STARTING_CAMERAS: should_run and ANY OFF
  ERROR --> STANDBY: parked → standby
  IDLE --> CHECKING_CAMERAS: Robo is running
  STANDBY --> IDLE: timer tick
  STARTING_CAMERAS --> ERROR: start requested: CamA
  note right of SHUTTING_DOWN_CAMERAS: placeholder (no handler)
  note right of CAMERA_POWEROFF: placeholder (no handler)
  note right of EXECUTING_FOCUS: placeholder (no handler)
  note right of STOWING: placeholder (no handler)
  note right of END_OF_SCHEDULE: placeholder (no handler)